--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                         </p>
                         <a href="" class="button button--flex">
                             <span class="button--flex">
-                                <i class="ri-shopping-bag-line"></i> Add to Bag
+                                <i class="ri-shopping-bag-line button_icon"></i> Add to Bag
                                 <span class="home__price">$299</span>
                             </span>
                         </a>
