--- a/index.html
+++ b/index.html
@@ -56,16 +56,6 @@
     <main class="main">
         <!-- =============== HOME ================ -->
         <section class="home section" id="home">
-
-        </section>
-
-        <!-- ============== SPONSOR ============== -->
-        <section class="sponsor section">
-
-        </section>
-
-        <!-- =============== SPECS ================ -->
-        <section class="specs section grid" id="specs">
             <div class="home__container container grid">
                 <div>
                     <img src="assets/img/home.png" alt="" class="home__img">
@@ -93,6 +83,21 @@
                     </div>
                 </div>
             </div>
+        </section>
+
+        <!-- ============== SPONSOR ============== -->
+        <section class="sponsor section">
+            <div class="sponsor__container container grid">
+                <img src="assets/img/sponsor1.png" alt="" class="sponsor__img" />
+                <img src="assets/img/sponsor2.png" alt="" class="sponsor__img" />
+                <img src="assets/img/sponsor3.png" alt="" class="sponsor__img" />
+                <img src="assets/img/sponsor4.png" alt="" class="sponsor__img" />
+            </div>
+        </section>
+
+        <!-- =============== SPECS ================ -->
+        <section class="specs section grid" id="specs">
+
         </section>
 
         <!-- =============== CASE ================ -->
