--- a/index.html
+++ b/index.html
@@ -134,7 +134,23 @@
 
         <!-- =============== CASE ================ -->
         <section class="case section grid" id="case">
+            <h2 class="section__title section__title-gradient">Case</h2>
+        
+            <div class="case__container container grid">
+                <div>
+                    <img src="assets/img/case.png" alt="" class="case__imag">
+                </div>
+                <div class="case__data">
+                    <p class="case__description">With a comfortable and adaptive case 
+                        so that you can store it wherever you want, and keep it in pristine condition.
+                    </p>
+                    <a href="" class="button button--flex">
+                        <i class="ri-information-line button__icon"></i> More info
+                    </a>
+                </div>
 
+
+            </div>
         </section>
 
     </main>
