--- a/index.html
+++ b/index.html
@@ -148,8 +148,22 @@
                         <i class="ri-information-line button__icon"></i> More info
                     </a>
                 </div>
+            </div>
+        </section>
 
+        <!-- =============== DISCOUNT ================ -->
+        <section class="discount section">
+            <div class="discount__container container grid">
+                <div class="discount__animate">
+                    <h2 class="discount__title">Immerse yourself in <br /> 
+                    your music</h2>
+                    <p class="discount__description">Get it now, up to 50% off.</p>
+                    <a href="" class="button button--flex">
+                        <i class="ri-shopping-bag-line button__icon"></i> Shop now
+                    </a>
+                </div>
 
+                <img src="assets/img/discount.png" alt="" class="discount__img">
             </div>
         </section>
 
