--- a/index.html
+++ b/index.html
@@ -135,13 +135,13 @@
         <!-- =============== CASE ================ -->
         <section class="case section grid" id="case">
             <h2 class="section__title section__title-gradient">Case</h2>
-        
+
             <div class="case__container container grid">
                 <div>
                     <img src="assets/img/case.png" alt="" class="case__imag">
                 </div>
                 <div class="case__data">
-                    <p class="case__description">With a comfortable and adaptive case 
+                    <p class="case__description">With a comfortable and adaptive case
                         so that you can store it wherever you want, and keep it in pristine condition.
                     </p>
                     <a href="" class="button button--flex">
@@ -155,8 +155,8 @@
         <section class="discount section">
             <div class="discount__container container grid">
                 <div class="discount__animate">
-                    <h2 class="discount__title">Immerse yourself in <br /> 
-                    your music</h2>
+                    <h2 class="discount__title">Immerse yourself in <br />
+                        your music</h2>
                     <p class="discount__description">Get it now, up to 50% off.</p>
                     <a href="" class="button button--flex">
                         <i class="ri-shopping-bag-line button__icon"></i> Shop now
@@ -164,6 +164,75 @@
                 </div>
 
                 <img src="assets/img/discount.png" alt="" class="discount__img">
+            </div>
+        </section>
+
+        <!-- =============== PRODUCTS ================ -->
+        <section class="products section" id="products">
+            <h2 class="section__title section__title-gradient products__line">
+                Choose Your Style
+            </h2>
+
+            <div class="products__container container grid">
+                <article class="products__card">
+                    <div class="products__content">
+                        <img src="assets/img/product1.png" alt="" class="products__img">
+                        <h3 class="products__title">Black</h3>
+                        <span class="products__price">$249</span>
+
+                        <button class="button button--flex products__button">
+                            <i class="ri-shopping-bag-line button__icon"></i>
+                        </button>
+                    </div>
+                </article>
+
+                <article class="products__card">
+                    <div class="products__content">
+                        <img src="assets/img/product2.png" alt="" class="products__img">
+                        <h3 class="products__title">Red Black</h3>
+                        <span class="products__price">$249</span>
+
+                        <button class="button button--flex products__button">
+                            <i class="ri-shopping-bag-line button__icon"></i>
+                        </button>
+                    </div>
+                </article>
+
+                <article class="products__card">
+                    <div class="products__content">
+                        <img src="assets/img/product3.png" alt="" class="products__img">
+                        <h3 class="products__title">Night Black</h3>
+                        <span class="products__price">$249</span>
+
+                        <button class="button button--flex products__button">
+                            <i class="ri-shopping-bag-line button__icon"></i>
+                        </button>
+                    </div>
+                </article>
+
+                <article class="products__card">
+                    <div class="products__content">
+                        <img src="assets/img/product4.png" alt="" class="products__img">
+                        <h3 class="products__title">Blue</h3>
+                        <span class="products__price">$249</span>
+
+                        <button class="button button--flex products__button">
+                            <i class="ri-shopping-bag-line button__icon"></i>
+                        </button>
+                    </div>
+                </article>
+
+                <article class="products__card">
+                    <div class="products__content">
+                        <img src="assets/img/product5.png" alt="" class="products__img">
+                        <h3 class="products__title">Twilight gray</h3>
+                        <span class="products__price">$249</span>
+
+                        <button class="button button--flex products__button">
+                            <i class="ri-shopping-bag-line button__icon"></i>
+                        </button>
+                    </div>
+                </article>
             </div>
         </section>
 
