--- a/index.html
+++ b/index.html
@@ -239,8 +239,81 @@
     </main>
 
     <!-- ================= FOOTER ==================== -->
-    <footer class="footer">
+    <footer class="footer section">
+        <div class="footer__container container grid">
+            <a href="assets/img/logo.png" class="footer__logo"></a>
 
+            <div class="footer__content">
+                <h3 class="footer__title">Products</h3>
+
+                <ul class="footer__links">
+                    <li>
+                        <a href="" class="footer__link">Headphones</a>
+                    </li>
+
+                    <li>
+                        <a href="" class="footer__link">Earphones</a>
+                    </li>
+
+                    <li>
+                        <a href="" class="footer__link">Earbuds</a>
+                    </li>
+
+                    <li>
+                        <a href="" class="footer__link">Accessories</a>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="footer__content">
+                <h3 class="footer__title">Support</h3>
+
+                <ul class="footer__links">
+                    <li>
+                        <a href="" class="footer__link">Product help</a>
+                    </li>
+
+                    <li>
+                        <a href="" class="footer__link">Register</a>
+                    </li>
+
+                    <li>
+                        <a href="" class="footer__link">Updates</a>
+                    </li>
+
+                    <li>
+                        <a href="" class="footer__link">Provides</a>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="footer__content">
+                <form action="" class="footer__form">
+                    <input type="email" name="" id="" class="footer__input">
+                    <button class="button button--flex">
+                        <i class="ri-send-plane-line button__icon"></i>Subscribe
+                    </button>
+                </form>
+
+                <div class="footer__social">
+                    <a href="http://www.facebook.com" target="_blank" class="footer__social-link">
+                        <i class="ri-facebook-line button__icon"></i>
+                    </a>
+                    <a href="http://www.instagram.com" target="_blank" class="footer__social-link">
+                        <i class="ri-instagram-line button__icon"></i>
+                    </a>
+                    <a href="http://www.twitter.com" target="_blank" class="footer__social-link">
+                        <i class="ri-twitter-line button__icon"></i>
+                    </a>
+                </div>
+
+                <p class="footer__copy">
+                    <a href=""  target="_blank" class="footer__copy-link">
+                        no rights reserved at the moment :]
+                    </a>
+                </p>
+            </div>
+        </div>
     </footer>
 
     <!-- ============== SCROLL REVEAL ================ -->
