Footer styles added

--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
 
             <div class="footer__content">
                 <form action="" class="footer__form">
-                    <input type="email" name="" id="" class="footer__input">
+                    <input type="email" placeholder="your mail" name="" id="" class="footer__input">
                     <button class="button button--flex">
                         <i class="ri-send-plane-line button__icon"></i>Subscribe
                     </button>
