Scroll Up (to start of page) button and functionality added

--- a/index.html
+++ b/index.html
@@ -315,6 +315,10 @@
             </div>
         </div>
     </footer>
+    <!-- ================ SCROLL UP ================== -->
+    <a href="#" class="scrollup" id="scroll-up">
+        <i class="ri-arrow-up-s-line scrollup__icon"></i>
+    </a>
 
     <!-- ============== SCROLL REVEAL ================ -->
     <script src=""></script>
