--- a/index.html
+++ b/index.html
@@ -241,7 +241,9 @@
     <!-- ================= FOOTER ==================== -->
     <footer class="footer section">
         <div class="footer__container container grid">
-            <a href="assets/img/logo.png" class="footer__logo"></a>
+            <a href="#" class="footer__logo">
+                <img src="assets/img/logo.png" alt="">
+            </a>
 
             <div class="footer__content">
                 <h3 class="footer__title">Products</h3>
@@ -289,7 +291,7 @@
 
             <div class="footer__content">
                 <form action="" class="footer__form">
-                    <input type="email" placeholder="your mail" name="" id="" class="footer__input">
+                    <input type="email" placeholder="email" name="" id="" class="footer__input">
                     <button class="button button--flex">
                         <i class="ri-send-plane-line button__icon"></i>Subscribe
                     </button>
@@ -306,14 +308,14 @@
                         <i class="ri-twitter-line button__icon"></i>
                     </a>
                 </div>
-
-                <p class="footer__copy">
-                    <a href=""  target="_blank" class="footer__copy-link">
-                        no rights reserved at the moment :]
-                    </a>
-                </p>
             </div>
         </div>
+
+        <p class="footer__copy">
+            <a href="" target="_blank" class="footer__copy-link">
+                no rights reserved at the moment :]
+            </a>
+        </p>
     </footer>
     <!-- ================ SCROLL UP ================== -->
     <a href="#" class="scrollup" id="scroll-up">
