Added reveal animations

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
             <div class="case__container container grid">
                 <div>
-                    <img src="assets/img/case.png" alt="" class="case__imag">
+                    <img src="assets/img/case.png" alt="" class="case__img">
                 </div>
                 <div class="case__data">
                     <p class="case__description">With a comfortable and adaptive case
@@ -323,7 +323,7 @@
     </a>
 
     <!-- ============== SCROLL REVEAL ================ -->
-    <script src=""></script>
+    <script src="assets/js/scrollreveal.min.js"></script>
 
     <!-- ================ MAIN JS ==================== -->
     <script src="assets/js/main.js"></script>
